--- a/unity_projet/Packages/manifest.json
+++ b/unity_projet/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.package-manager-ui": "2.0.13",
     "com.unity.purchasing": "2.2.1",
     "com.unity.textmeshpro": "1.4.1",
+    "com.unity.vectorgraphics": "1.0.0-preview.34",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
